[package]
name = "Rust-based_R-Exploit"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]

libc = "0.2"
region = "3.0.0"
mlua = { version = "0.8", features = ["luau", "vendored"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
lazy_static = "1.4.0"
terminal-spinners = "0.3.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "std", "libloaderapi", "winnt", "minwindef", "memoryapi", "consoleapi", "wincon", "processenv", "winbase", "processthreadsapi"] }
